--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,37 +6,80 @@
 #    By: abesombes <marvin@42.fr>                   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/10/06 12:36:03 by abesombes         #+#    #+#              #
-#    Updated: 2020/11/15 11:42:08 by alexandre        ###   ########.fr        #
+#    Updated: 2020/11/19 23:27:42 by abesombe         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
-DYNAMICNAME = libft.so
 CC = gcc
 RM = rm -f
-HEADER = srcs/libft.h
-SRCS = ${wildcard srcs/*.c}
-OBJS = ${SRCS:.c=.o}
+HEADER = libft.h
+SRCS_PARTS = ft_atoi.c \
+ft_bzero.c \
+ft_calloc.c \
+ft_isalnum.c \
+ft_isalpha.c \
+ft_isascii.c \
+ft_isdigit.c \
+ft_isprint.c \
+ft_itoa.c \
+ft_memccpy.c \
+ft_memchr.c \
+ft_memcmp.c \
+ft_memcpy.c \
+ft_memmove.c \
+ft_memset.c \
+ft_putchar_fd.c \
+ft_putendl_fd.c \
+ft_putnbr_fd.c \
+ft_putstr_fd.c \
+ft_split.c \
+ft_strchr.c \
+ft_strdup.c \
+ft_strjoin.c \
+ft_strlcat.c \
+ft_strlcpy.c \
+ft_strlen.c \
+ft_strmapi.c \
+ft_strncmp.c \
+ft_strnstr.c \
+ft_strrchr.c \
+ft_strtrim.c \
+ft_substr.c \
+ft_tolower.c \
+ft_toupper.c
+SRCS_BONUS = ft_lstadd_back.c \
+ft_lstadd_front.c \
+ft_lstclear.c \
+ft_lstdelone.c \
+ft_lstiter.c \
+ft_lstlast.c \
+ft_lstmap.c \
+ft_lstnew.c \
+ft_lstsize.c
+OBJS_PARTS = $(SRCS_PARTS:.c=.o)
+OBJS_BONUS = $(OBJS_PARTS) $(SRCS_BONUS:.c=.o)
 LIBC = ar -rcs
 CFLAGS = -Wall -Wextra -Werror
 
 %.o : %.c
-	 ${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
+	@$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
 
-$(NAME): ${OBJS} ${HEADER}
-	${LIBC} $(NAME) ${OBJS}
+$(NAME): $(OBJS_PARTS) $(HEADER)
+	@$(LIBC) $(NAME) $(OBJS_PARTS)
 
-so: all
-	${CC} -o $(DYNAMICNAME) -shared -fPIC ${OBJS}
+bonus: $(OBJS_BONUS) $(HEADER)
+	@$(CC) -c $(CFLAGS) $(SRCS_PARTS) $(SRCS_BONUS)
+	@$(LIBC) $(NAME) $(OBJ_BONUS)
 
 all: $(NAME)
 
 clean:
-	${RM} ${OBJS}
+	@$(RM) $(OBJS_BONUS)
 
 fclean: clean
-	${RM} ${NAME}
+	@$(RM) $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all bonus clean fclean re
