correction Makefile bonus part

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: abesombes <marvin@42.fr>                   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/10/06 12:36:03 by abesombes         #+#    #+#              #
-#    Updated: 2020/11/19 23:27:42 by abesombe         ###   ########.fr        #
+#    Updated: 2020/11/20 00:22:18 by abesombe         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -69,8 +69,8 @@ $(NAME): $(OBJS_PARTS) $(HEADER)
 	@$(LIBC) $(NAME) $(OBJS_PARTS)
 
 bonus: $(OBJS_BONUS) $(HEADER)
-	@$(CC) -c $(CFLAGS) $(SRCS_PARTS) $(SRCS_BONUS)
-	@$(LIBC) $(NAME) $(OBJ_BONUS)
+	@$(CC) -c $(SRCS_PARTS) $(SRCS_BONUS) $(CFLAGS)
+	@$(LIBC) $(NAME) $(OBJS_BONUS)
 
 all: $(NAME)
 
